--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <!--              -->
     <title>Valentine Day</title>
 </head>
-
+<audio id="player" autoplay loop>
+    <source src="./music/Lam.mp3" type="audio/mp3" />
+</audio>
 <body>
     <div class="container">
         <img class="paperHeart paperHeart1" style="--time: 0s" src="./img/paperHeart.webp" alt="">
