--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Protest+Revolution&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Pacifico&family=Protest+Revolution&display=swap" rel="stylesheet">
     <!--              -->
-    <title>Valentine Day</title>
+    <title>Mừng sinh nhật em Lam</title>
 </head>
 <audio id="player" autoplay loop>
     <source src="./music/Lam.mp3" type="audio/mp3" />
