--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
     <!--              -->
     <title>Mừng sinh nhật em Lam</title>
 </head>
-<audio id="player" autoplay loop>
-    <source src="./music/Lam.mp3" type="audio/mp3" />
-</audio>
+
 <body>
     <div class="container">
         <img class="paperHeart paperHeart1" style="--time: 0s" src="./img/paperHeart.webp" alt="">
@@ -65,9 +63,12 @@
         </div>
     </div>
 
-<audio id="player" autoplay loop>
-    <source src="./music/Lam.mp3" type="audio/mp3" />
-</audio>
+
+    <audio autoplay>
+    
+        <source src="./music/Lam.mp3" type="audio/mp3">
+
+    </audio>
     <script src="./main.js"></script>
 </body>
 
