--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 </head>
 
 <body>
+    <audio autoplay>
+        <source src="../music/Lam.mp3">
+    </audio>
+    
     <div class="container">
         <img class="paperHeart paperHeart1" style="--time: 0s" src="./img/paperHeart.webp" alt="">
         <img class="paperHeart paperHeart2" style="--time: 1s" src="./img/paperHeart.webp" alt="">
@@ -63,12 +67,6 @@
         </div>
     </div>
 
-
-    <audio autoplay>
-    
-        <source src="./music/Lam.mp3" type="audio/mp3">
-
-    </audio>
     <script src="./main.js"></script>
 </body>
 
