--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <audio autoplay>
-        <source src="../music/Lam.mp3">
+        <source src="Lam.mp3">
     </audio>
     
     <div class="container">
@@ -41,7 +41,7 @@
 
             <div class="btnBox">
                 <div class="cloudBtn"></div>
-                <button class="openBtn">Bấm zô đây nè em Lam</button>
+                <button class="openBtn">Bâm zô đây nè em Lam</button>
             </div>
         </div>
 
