--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 </head>
 
 <body>
-    <audio autoplay>
-        <source src="Lam.mp3">
+    <audio id="player" autoplay loop>
+        <source src="./music/Lam.mp3">
     </audio>
-    
+<body>
     <div class="container">
         <img class="paperHeart paperHeart1" style="--time: 0s" src="./img/paperHeart.webp" alt="">
         <img class="paperHeart paperHeart2" style="--time: 1s" src="./img/paperHeart.webp" alt="">
