--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <audio id="player" autoplay loop>
+    <audio autoplay>
         <source src="./music/Lam.mp3">
     </audio>
     
