--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 </head>
 
 <body>
-    <audio autoplay>
-        <source src="Lam.mp3">
+    <audio id="player" autoplay>
+        <source src="../music/Lam.mp3">
     </audio>
+<body>
     
     
     <div class="container">
